@@ -6,6 +6,7 @@ Additions:
    * Add ELM_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN.
    * Add elementary_codegen
    * Add window floating mode api's
+   * Add reorder mode set/get API in Toolbar.
 
 Improvements:
 
